styles/Home.module.css
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 80%;
  margin: 0 auto;
}

.shield {
  transform: scale(3);
  z-index: -1;
  margin-top: -58px;
  margin-bottom: 20px;
}

.title {
  font-size: 4em;
}

.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  border: 1px solid black;
  margin: 40px 0;
  width: 50%;
  border-radius: 50px;
}

.tl .tr .bl .br {
  z-index: 1000;
}

.secret {
  display: flex;

  /* opacity: 0%; */
}

.secretdivider {
  margin: 0 2px;
  display: flex;
  flex-direction: column;
  margin-bottom: 22px;
  opacity: 0;
  /* set this flag off for debug */
}

/* .tl {
  margin-bottom: -5px;
}

.tr {
  margin-bottom: 5px;
  margin-top: 19px;
}

.bl {
  margin-top: 0;
}

.br {
  margin-top: 0;
} */

